--- a/Source/Common/Projects/NTDirectX/Coord.cls
+++ b/Source/Common/Projects/NTDirectX/Coord.cls
@@ -39,7 +39,8 @@ Public Function Equals(ByRef Point As Point) As Boolean
 End Function
 
 Public Property Get Serialize() As String
-Attribute Serialize.VB_MemberFlags = "240"
+Attribute Serialize.VB_UserMemId = 0
+Attribute Serialize.VB_MemberFlags = "600"
     Serialize = "[" & Round(X, 6) & ", " & Round(Y, 6) & "]"
 End Property
 Public Property Let Serialize(ByVal RHS As String)
@@ -54,7 +55,7 @@ Public Property Let Serialize(ByVal RHS As String)
             End If
             RHS = Mid(RHS, InStr(RHS, ",") + 1)
         End If
-        If InStr(RHS, ",") > 0 Then
+        If InStr(RHS, ",") = 0 Then
             If IsNumeric(Left(RHS, InStr(RHS, ",") - 1)) Then
                 Y = CSng(Left(RHS, InStr(RHS, ",") - 1))
             Else
